# foldhash

./: Cargo.toml
benches/: bench.rs
