[package]
name = "foldhash"
version = "0.1.3"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
license = "Zlib"
repository = "https://github.com/orlp/foldhash"
readme = "README.md"
keywords = ["hash", "hasher", "no-std"]
categories = ["algorithms", "no-std"]
description = "A fast, non-cryptographic, minimally DoS-resistant hashing algorithm."
edition = "2021"
exclude = ["benches", "tools", "assets"]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
ahash = "0.8"
chrono = "0.4"
criterion = "0.5"
fnv = "1"
fxhash = "0.2"
hashbrown = "0.14"
rand = "0.8"
rustc-hash = "2"
uuid = "1.8"

[lib]
bench = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[[bench]]
name = "avalanche"
path = "benches/avalanche.rs"
harness = false

[profile.release]
lto = "thin"
